--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,7 +206,7 @@
     <string name="activity1_name">Museum of Chinese in America</string>
     <string name="activity1_static">devoted to presenting and preserving
     the history, heritage, and culture of Chinese immigrants in the US</string>
-    <string name="activity1_type">museum</string>
+    <string name="activity1_type">Museum</string>
     <string name="activity1_address">215 Centre Street</string>
     <string name="activity1_website" translatable="false">mocanyc.org</string>
     <string name="activity1_phone_number" translatable="false">212-619-4785</string>
@@ -215,7 +215,7 @@
     <string name="activity2_static">NYC\'s largest Buddhist temple; provides services such as
     formal ceremonies on weekends, fortune telling, weddings,
     and areas for friends and families of the deceased to pay their respects</string>
-    <string name="activity2_type">religious institution</string>
+    <string name="activity2_type">Religious Institution</string>
     <string name="activity2_address">133 Canal Street</string>
     <string name="activity2_website" translatable="false">mahayana.us</string>
     <string name="activity2_phone_number" translatable="false">212-925-8787</string>
@@ -223,19 +223,19 @@
     <string name="activity3_name" translatable="false">Aji Ichiban</string>
     <string name="activity3_static">an Asian snack paradise for those wishing to satisfy their sweet
     tooth; sells a variety of dried foods, exotic hard-to-find savory treats, and nostalgic Western treats</string>
-    <string name="activity3_type">confectionery shop</string>
+    <string name="activity3_type">Confectionery Shop</string>
     <string name="activity3_address">37 Mott Street</string>
     <string name="activity3_phone_number" translatable="false">212-233-7650</string>
 
     <string name="activity4_name" translatable="false">Canal Street</string>
     <string name="activity4_static">a shopping experience with an open-air bazaar feel,
     complete with vendors willing to bargain </string>
-    <string name="activity4_type">shopping</string>
+    <string name="activity4_type">Shopping</string>
 
     <string name="activity5_name" translatable="false">Apotheke</string>
     <string name="activity5_static">a bar inspired by European apothecaries and resembles
     a chemistry lab; offers over 250 cocktails, referred to as "prescriptions"</string>
-    <string name="activity5_type">bar</string>
+    <string name="activity5_type">Bar</string>
     <string name="activity5_address">9 Doyers Street</string>
     <string name="activity5_website" translatable="false">apothekenyc.com</string>
     <string name="activity5_phone_number" translatable="false">212-406-0400</string>
@@ -243,7 +243,7 @@
     <string name="activity6_name">Columbus Park</string>
     <string name="activity6_static">at the heart of Chinatown; has a basketball court,
     playground, Astroturf field; The north is an area for mah-jongg and card players</string>
-    <string name="activity6_type">park</string>
+    <string name="activity6_type">Park</string>
     <string name="activity6_address">66 Mulberry Street</string>
     <string name="activity6_website" translatable="false">nycgovparks.org/parks/columbus-park-m015/</string>
     <string name="activity6_phone_number" translatable="false">212-406-0400</string>
@@ -251,7 +251,7 @@
     <string name="activity7_name">Chinese Consolidated Benevolent Association</string>
     <string name="activity7_static">founded to serve and protect the interests of the Chinese people in
     the New York metropolitan area; provides social services, language classes and cultural preservation activities</string>
-    <string name="activity7_type">community center</string>
+    <string name="activity7_type">Community Center</string>
     <string name="activity7_address">62 Mott Street</string>
     <string name="activity7_website" translatable="false">ccbanyc.org</string>
     <string name="activity7_phone_number" translatable="false">212-226-6280</string>
@@ -259,27 +259,28 @@
     <string name="activity8_name">Magic Jewelry</string>
     <string name="activity8_static">an occult shop which specializes in feng shui,
     crystals, and horoscopes; the only place in the city that photographs and reads auras</string>
-    <string name="activity8_type">shopping</string>
+    <string name="activity8_type">Shopping</string>
     <string name="activity8_address">238 Canal Street</string>
     <string name="activity8_phone_number" translatable="false">212-343-0663</string>
 
-    <string name="activity9_name" translatable="false">Mmuseumm</string>
+    <string name="activity9_name" translatable="false">Museum</string>
     <string name="activity9_static">a modern natural history museum located in a
     freight elevator; collection of unique artifacts</string>
+    <string name="activity9_type">N/A</string>
     <string name="activity9_address">4 Cortlandt Alley</string>
     <string name="activity9_website" translatable="false">mmuseumm.com</string>
     <string name="activity9_phone_number" translatable="false">888-763-8839</string>
 
     <string name="activity10_name">Up Stairs</string>
     <string name="activity10_static">located on the second floor of an apartment building;     This small but lively bar encourages patrons to belt out to the classics while drinking brews on tap</string>
-    <string name="activity10_type">karaoke bar</string>
+    <string name="activity10_type">Karaoke Bar</string>
     <string name="activity10_address">59 Canal Street</string>
     <string name="activity10_phone_number" translatable="false">646-559-0098</string>
 
     <string name="activity11_name">Zu Yuan</string>
     <string name="activity11_static">spend a day of relaxation and unwinding; provides spa
     and beauty services for face and body </string>
-    <string name="activity11_type">spa</string>
+    <string name="activity11_type">Spa</string>
     <string name="activity11_address">48 Mott Street</string>
     <string name="activity11_phone_number" translatable="false">212-587-8881</string>
 
@@ -291,7 +292,7 @@
         most notorious slum, to the narrow alleys Chinatown’s  “Bloody Angle.” In Little Italy’s Historic District
         we learn the ruthless tactics of the first Mafia bosses of New York, the proud efforts of NYPD Liutenant
         Joe Petrosino’s fight against these thugs. Organized Crime as we know it was born on these streets.</string>
-    <string name="activity12_type">walking tour</string>
+    <string name="activity12_type">Walking Tour</string>
     <string name="activity12_address">meets at the corner of Mulberry &amp;amp; Worth streets</string>
     <string name="activity12_website" translatable="false">nycgangstertours.com/</string>
     <string name="activity12_phone_number" translatable="false">516-652-4527</string>
@@ -299,6 +300,7 @@
     <string name="activity13_name">Church of the Transfiguration</string>
     <string name="activity13_static">serves the Irish, German, Italian and, most recently, Chinese communities;
      Sunday masses are held in English, Mandarin, and Cantonese; houses a chinese school</string>
+    <string name="activity13_type">N/A</string>
     <string name="activity13_address">29 Mott Street</string>
     <string name="activity13_website" translatable="false">transfigurationnyc.org</string>
     <string name="activity13_phone_number" translatable="false">212-962-5157</string>
@@ -306,13 +308,14 @@
     <string name="activity14_name">Lunar New Year Parade &amp;amp; Festival</string>
     <string name="activity14_static">an annual celebration of the beginning of the turn of the
     Chinese lunisolar calendar; features all kinds of vendors, festivities, and food for all ages</string>
-    <string name="activity14_type">parade</string>
+    <string name="activity14_type">Parade</string>
     <string name="activity14_address">East Houston Street to Canal Street</string>
     <string name="activity14_website" translatable="false">betterchinatown.com/</string>
 
     <string name="activity15_name">Autumn Mood Parade &amp;amp; Festival</string>
     <string name="activity15_static">an annual celebration of the end of the autumn harvest; held on the
     15th day of the 8th lunar month; features stage performances, cultural arts &amp;amp; crafts, calligraphy, gift booths, moon cake tastings, etc.</string>
+    <string name="activity15_type">N/A</string>
     <string name="activity15_address">Mott Street; between Canal and Beyard Streets</string>
 
     <!-- Activities Sub-Section: Shopping -->
@@ -381,7 +384,42 @@
     <string name="Activity8_shopping_website_link" translatable="false"> N/a </string>
     <string name="Activity_shopping8_phone_number" translatable="false"> N/a </string>
 
+    <string-array name="activities_name">
+        <item>@string/activity1_name</item>
+        <item>@string/activity2_name</item>
+        <item>@string/activity3_name</item>
+        <item>@string/activity4_name</item>
+        <item>@string/activity5_name</item>
+        <item>@string/activity6_name</item>
+        <item>@string/activity7_name</item>
+        <item>@string/activity8_name</item>
+        <item>@string/activity9_name</item>
+        <item>@string/activity10_name</item>
+        <item>@string/activity11_name</item>
+        <item>@string/activity12_name</item>
+        <item>@string/activity13_name</item>
+        <item>@string/activity14_name</item>
+        <item>@string/activity15_name</item>
+    </string-array>
 
+    <string-array name="activities_static_info">
+        <item>@string/activity1_type</item>
+        <item>@string/activity2_type</item>
+        <item>@string/activity3_type</item>
+        <item>@string/activity4_type</item>
+        <item>@string/activity5_type</item>
+        <item>@string/activity6_type</item>
+        <item>@string/activity7_type</item>
+        <item>@string/activity8_type</item>
+        <item>@string/activity9_type</item>
+        <item>@string/activity10_type</item>
+        <item>@string/activity11_type</item>
+        <item>@string/activity12_type</item>
+        <item>@string/activity13_type</item>
+        <item>@string/activity14_type</item>
+        <item>@string/activity15_type</item>
+
+    </string-array>
     <!--  Historical Sights -->
 
 
@@ -587,7 +625,7 @@
 
     <!-- Transportation -->
     <string name="train_notice">During weekends, trains may be subjected to change due to construction.</string>
-    <!-- <string name="mta_weekender"><a href="http://web.mta.info/weekender.html">Check the MTA Weekender</a></string> -->
+    <!-- <string name="mta_weekender"><http://web.mta.info/weekender.html">Check the MTA Weekender</string> -->
 
     <string name="canal_street_station">Canal Street Station</string>
     <string name="canal_street_trains" translatable="false">Trains: N, Q, R, W, J, Z, M, 4, 6</string>
