--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -336,4 +336,9 @@
     <string name="title_home">家</string>
     <string name="title_dashboard">仪表板</string>
     <string name="title_notifications">通知</string>
+    <string name="m14a_bus">14米的巴士路线</string>
+    <string name="m14a_bus_description">如果您在西村、 Flatiron District, Gramercy 公园或东村，您可以采取的14M 的总线，它将带您进入下东侧到唐人街。</string>
+    <string name="m21_bus">21 米的巴士路线</string>
+    <string name="m21_bus_description">这取决于您所在的地方，从哈德逊广场，以较低的东侧，您可以采取的21 M 总线以获得整个曼哈顿。</string>
+    <string name="m15_bus">15 米的巴士路线</string>
 </resources>
