--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -712,7 +712,7 @@
     <string name="grand_street_description">During the week ends the B trains do not run. Only the D trains stop at this station.</string>
 
     <string name="m14a_bus">M14A Bus Route</string>
-    <string name="m14a_bus_description">If you are in West Village, Flatiron District, Gramacy Park or East Vilage you can take the M14A bus that will take you into the Lower East Side into Chinatown.</string>
+    <string name="m14a_bus_description">If you are in West Village, Flatiron District, Gramercy Park or East Village you can take the M14A bus that will take you into the Lower East Side into Chinatown.</string>
     
     <string name="m21_bus">M21 Bus Route</string>
     <string name="m21_bus_description">Depending on where you are from Hudson Square to the Lower East Side, you can take the M21 bus to get across Manhattan.</string>
