--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -378,5 +378,15 @@
     <string name="facts_button1">Volver</string>
     <string name="factsbutton2">Siguiente</string>
     <string name="facts_button3">Finalizar</string>
+    <string name="funfact1">Mitad de Chinatown fue una vez parte de los cinco puntos, una infame de los barrios de tugurios. Se encuentra entre el Bowery, Park Row, Center Street, y la Calle Canal</string>
+    <string name="funfact2">Canal Street fue una vez, como su nombre indica, un canal. Sin embargo, este canal fue básicamente una alcantarilla y fue un problema enorme. Estaba llena en 1819 y una calle en 1820.</string>
+    <string name="funfact3">La estatua de Buda más alto en Nueva York se encuentra en el templo budista mahayana. Se encuentra a 16 pies.</string>
+    <string name="funfact4">Asia, excluyendo la ciudad de Nueva York tiene la mayor población china en una ciudad.</string>
+    <string name="funfact5">Antes de 1965, la población de Chinatown fue abrumadoramente masculinos. Hubo unos 4.000 hombres a 20 mujeres casadas! Esto es debido a que ingresan a los Estados Unidos después de 1882 era casi imposible para los no-élite. Sola y las mujeres desempleadas no fueron autorizados a entrar porque eran vistos como prostititutes, que fueron prohibidos en 1875.</string>
+    <string name="funfact6">Chinatown fue un sitio de continua actividad pandillera en los tempranos 1800s. Una banda llamada metro controlado las tenacillas oficios de juegos de azar y el narcotráfico. Los dueños de negocios también se basó en las pinzas para otorgar préstamos, ayuda legal y protección frente a la injerencia del gobierno. Muchos propietarios de negocios que vivieron en sus almacenes, que violan los códigos.</string>
+    <string name="funfact7">La mayor parte de la vieja Chinatown ha cerrado debido al cambio de los patrones de inmigración, el aumento de la presencia del gobierno, e implacable de las fuerzas del mercado. La mayoría de las empresas de la vieja Chinatown fueron cerradas debido a la brutal los precios de alquiler.</string>
+    <string name="funfact8">Mott Street es la calle más antigua de Chinatown habitadas por el pueblo chino.</string>
+    <string name="funfact9">Doyers Street ha aparecido en numerosos programas de televisión y películas, como persona de interés y Amazing Spider-Man 2.</string>
+    <string name="funfact10">Chinatown justo en Mott Street es uno de los últimos remanentes de arcades clásicos en el mundo.</string>
 
 </resources>
