--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -371,5 +371,10 @@
     <string name="funfact3">世界上最高的佛像在纽约位于大乘佛教寺庙。 它达 16 英尺。</string>
     <string name="funfact4">但不包括亚洲、纽约城，中国最大的人口中的一个城市。</string>
     <string name="funfact5">1965 之前，唐人街的人口的绝大多数是男性。 有大约 4,000 名男子以 20 已婚妇女！ 这是因为进入美国后， 1882 是几乎不可能的非精英。 单个和失业的妇女是不允许进入的，因为他们被视为是妓女，她们是被禁止的， 1875 。</string>
+    <string name="funfact6">唐人街是一个站点的连续的帮派活动早在 1800s 。 一个刚被称为钳子控制的地下行业的赌博和毒品交易。 企业所有者还依靠的钳子，提供贷款、法律援助和保护不受政府的干涉。 许多企业业主居住在他们的商店，这违反了代码。</string>
+    <string name="funfact7">最古老的唐人街已经关闭，由于不断变化的移民模式、增加政府的存在，和无情的市场力量。 最古老的唐人街经营的企业被关闭，因为残酷的租金价格。</string>
+    <string name="funfact8">万隆工程街是最古老的街道，唐人街，居住着中国人民。</string>
+    <string name="funfact9">Doyers 街头出现了许多电视节目和电影，如人的兴趣和令人惊叹的 Spider-Man 2 。</string>
+    <string name="funfact10">唐人街的展览对万隆工程街，是一个最后剩下的经典拱廊中的世界。</string>
 
 </resources>
