--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -757,11 +757,11 @@
     <string name="funfact2">Canal Street was once, as the name implies, a canal. However, this canal was basically an open sewer and was a huge problem. It was filled in 1819 and a street in 1820.</string>
     <string name="funfact3">The tallest Buddha Statue in New York is located at the Mahayana Buddhist Temple. It stands at 16 feet.</string>
     <string name="funfact4">Excluding Asia, New York City has the largest Chinese population in a city.</string>
-    <string name="funfact5">Before 1965, Chinatown\'s population was overwhelmingly male. There was about 4,000 men to 20 married women! This is because entering the US after 1882 was almost impossible for the non-elite. Single and unemployed women weren\'t allowed to enter because they were viewed as prosititutes, who were banned in 1875.</string>
-    <string name="funfact6">Chinatown was a site of continous gang activity in the early 1800s. A gang called the Tongs controlled underground trades of gambling and drug dealing. Business owners also relied on the Tongs to provide loans, legal aid, and protection from goverment interference. Many business owners lived in their stores, which violated codes.</string>
+    <string name="funfact5">Before 1965, Chinatown\'s population was overwhelmingly male. There was about 4,000 men to 20 married women! This is because entering the US after 1882 was almost impossible for the non-elite. Single and unemployed women weren\'t allowed to enter because they were viewed as prostititutes, who were banned in 1875.</string>
     <string name="funfact7">Most of Old Chinatown has closed down due to changing immigration patterns, increased government presence, and relentless market forces. Most of Old Chinatown\'s businesses were closed due to brutal rent prices.</string>
     <string name="funfact8">Mott Street is the oldest street in Chinatown inhabited by the Chinese people.</string>
     <string name="funfact9">Doyers Street has appeared in many tv shows and movies, such as Person of Interest and The Amazing Spider-Man 2.</string>
     <string name="funfact10">Chinatown Fair on Mott Street is one of the last remaining classic arcades in the world.</string>
+    <string name="funfact6">Chinatown was a site of continuous gang activity in the early 1800s. A gang called the Tongs controlled underground trades of gambling and drug dealing. Business owners also relied on the Tongs to provide loans, legal aid, and protection from government interference. Many business owners lived in their stores, which violated codes.</string>
 
 </resources>
