--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -376,7 +376,7 @@
     <string name="timeline_button2">Futuro</string>
     <string name="timeline_button3">Presente</string>
     <string name="facts_button1">Volver</string>
-    <string name="factsbutton2">Siguiente</string>
+    <string name="facts_button2">Siguiente</string>
     <string name="facts_button3">Finalizar</string>
     <string name="funfact1">Mitad de Chinatown fue una vez parte de los cinco puntos, una infame de los barrios de tugurios. Se encuentra entre el Bowery, Park Row, Center Street, y la Calle Canal</string>
     <string name="funfact2">Canal Street fue una vez, como su nombre indica, un canal. Sin embargo, este canal fue básicamente una alcantarilla y fue un problema enorme. Estaba llena en 1819 y una calle en 1820.</string>
