--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -364,7 +364,7 @@
     <string name="timeline_button2">未来</string>
     <string name="timeline_button3">目前</string>
     <string name="facts_button1">背面</string>
-    <string name="factsbutton2">下一个</string>
+    <string name="facts_button2">下一个</string>
     <string name="facts_button3">完成</string>
     <string name="funfact1">一半的唐人街曾是部分的 5 个点，这是一个声名狼藉的贫民窟。 这是坐落在 Bowery 之间、公园、中央大街、行和运河街</string>
     <string name="funfact2">运河街一度，顾名思义，一条运河。 但是，这种运河基本上是一个开放的排水管道，是一个很严重的问题。 这是填充， 1819 和 1820 中的一个街道。</string>
